[tool.poetry]
name = "python-poetry-project-example"
version = "0.1.0"
description = ""
authors = ["Author <email@address>"]
readme = "README.md"
packages = [{include = "python_poetry_project_example"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
